# safestructures

./: LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_docs.yaml  ci_tests.yaml  release.yaml
docs/: examples.md  home.md  index.md  installation.md  plugins_guide.md  usage.md
docs/api/: dataprocessor.md  load_file.md  save_file.md  tensorprocessor.md
src/safestructures/: __init__.py  constants.py  defaults.py  serializer.py  wrapper.py
src/safestructures/processors/: base.py  basic.py  iterable.py  tensor.py
src/safestructures/utils/: dataclass.py  module.py
tests/: conftest.py  test_basic.py  test_examples.py  test_iterable.py  test_nested.py  test_plugin.py  test_serializer.py  test_tensor.py  test_wrapper.py  utils.py
